# bot_battle

./: .gitignore  Dockerfile  README.md  dispatcher.Dockerfile  docker-compose.yaml  pyproject.toml  runner.Dockerfile  scheduler.Dockerfile
botbattle/: __init__.py  client.py  players.py  protocol.py  side.py  state.py
common/: database.py  models.py  requirements.txt  utils.py
dispatcher/: Dockerfile  dispatcher.py  models.py  requirements.txt  runner.py  webserver.py
runner/: Dockerfile  runner.py
sample_bots/: human_player.py  main.py  random_player.py  requirements.txt  simple.py  spawn_clients.py
sample_bots/connectivity_test/: serve.py
scheduler/: scheduler.py
src/: README.md
src/bot_battle_sdk/: pyproject.toml
src/bot_battle_sdk/bot_battle_sdk/: client.py  players.py  protocol.py  state.py
src/dispatcher/: database.py  models.py  requirements.txt  runner.py  utils.py  webserver.py
src/sample_bots/: main.py  random_player.py  single_bot_client_test.py  spawn_clients.py
src/sample_bots/connectivity_test/: connect.py
src/tests/: conftest.py  supabase_dump.sql  test_client.py  test_leaky_bucket.py  test_models.py  test_protocol.py  test_runner.py  test_state.py  test_webserver.py
tests/: requirements.txt  sql_manual_tests.ipynb  test_client.py  test_code.py  test_dispatcher.py  test_leaky_bucket.py  test_make_code.py  test_run_crashes.py  test_runner.py  test_state.py  test_webserver.py
